--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div>
         <h1>Hello, <span></span></h1>
         <h1>INI PROJEK TUGAS TKJ1 <span></span></h1>
-        <h1>Dewa,Rangga,Fajar,Bagas,Ridho,Sandi F,Asep <span></span></h1>
+        <h1>Panel Hosting <span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
@@ -150,7 +150,7 @@ Fungsinya: mengelola file, domain, database, email, backup, dan lainnya dengan c
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Nama Nama kelompok</h1>
-            <h2>Dewa, Rangga, Bagas</h2>
+            <h2>Dewa,Rangga,Fajar,Bagas,Ridho,Sandi F,Asep</h2>
           </div>
         </div>
       </div>
